--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ terraform/terraform.tfstate
 terraform/terraform.tfvars
 terraform/plugins/
 terraform/.terraform
+terraform/terraform.tfstate.backup
